add Security user login

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 
-    <h1>Вітаю на практиці!</h1><hr>
+    <h1>Вітаю на практиці!</h1><hr><br>
+    <a href="/login">Увійти</a>
     <form th:action="@{/}" method="get">
         Пошук товару по назві: <input type="text" name="title">
         <input type="submit" value="Пошук">
