--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -12,6 +12,7 @@
   e-mail: <input type="email" name="email"> <br><br>
   Номер телефону: <input type="text" name="numberPhone"> <br><br>
   Пароль: <input type="password" name="password"> <br><br>
+<!--    <input type="hidden" name="$_csrf." value="${_csrf.token}"/>-->
   <input type="submit" value="Зареєструватися">
 </form>
 
