--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,7 +14,7 @@
 <form th:action="@{/login}" method="post">
   <div><label> Ваш e-mail : <input type="text" name="username"/> </label></div>
   <div><label> Пароль: <input type="password" name="password"/> </label></div>
-<!--  <input type="hidden" name="_csrf.}" value="${_csrf.token}"/>-->
+<!--  <input type="hidden" name="_csrf" value="${_csrf.token}"/>-->
   <div><input type="submit" value="Увійти"/></div>
 </form>
 <a href="/registration">Зареєструватися</a>
