--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,20 +3,45 @@
 <head>
   <meta charset="UTF-8">
   <title> практика 3ІПЗ-20 </title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <style>
+    body {
+      background-color: #343a40;
+      color: #fff;
+    }
+
+    input[type="text"] {
+      color: #007bff;
+    }
+
+    input[type="password"] {
+      color: #28a745;
+    }
+  </style>
 </head>
 <body>
-<div th:if="${param.error}">
-  Неправильний логін або пароль.
+<div class="container mt-4">
+  <div th:if="${param.error}" class="alert alert-danger">
+    Неправильний логін або пароль.
+  </div>
+  <div th:if="${param.logout}" class="alert alert-success">
+    You have been logged out.
+  </div>
+  <form th:action="@{/login}" method="post">
+    <div class="mb-3">
+      <label for="email" class="form-label">Ваш e-mail:</label>
+      <input type="text" class="form-control" id="email" name="username"/>
+    </div>
+    <div class="mb-3">
+      <label for="password" class="form-label">Пароль:</label>
+      <input type="password" class="form-control" id="password" name="password"/>
+    </div>
+    <!--  <input type="hidden" name="_csrf" value="${_csrf.token}"/>-->
+    <button type="submit" class="btn btn-primary">Увійти</button>
+  </form>
+  <a href="/registration" class="btn btn-primary mt-3">Зареєструватися</a>
 </div>
-<div th:if="${param.logout}">
-  You have been logged out.
-</div>
-<form th:action="@{/login}" method="post">
-  <div><label> Ваш e-mail : <input type="text" name="username"/> </label></div>
-  <div><label> Пароль: <input type="password" name="password"/> </label></div>
-<!--  <input type="hidden" name="_csrf" value="${_csrf.token}"/>-->
-  <div><input type="submit" value="Увійти"/></div>
-</form>
-<a href="/registration">Зареєструватися</a>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
