--- a/src/main/resources/templates/product-info.html
+++ b/src/main/resources/templates/product-info.html
@@ -1,28 +1,51 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <link style="">
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background-color: #343a40;
+            color: #fff;
+        }
+
+        .carousel-item img {
+            height: 200px;
+            object-fit: cover;
+        }
+    </style>
 </head>
 <body th:inline="text">
-    <h1>Вітаю на практиці!</h1> <hr>
-    <h3>Інформація про товар</h3>
-
-<div th:each="image : ${images}">
-    <img th:src="@{/images/{id}(id=${image.id})}" height="100">
+<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+        <div th:each="image, iterStat : ${images}" class="carousel-item" th:classappend="${iterStat.index == 0} ? 'active' : ''">
+            <img th:src="@{'/images/' + ${image.id}}" alt="Image">
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
 </div>
 
-    <b>Назва товару: </b> [[${product.title}]] <br>
-    <b>Опис товару: </b> [[${product.description}]] <br>
-    <b>Ціна товару: </b> [[${product.price}]] <br>
-    <b>Місто: </b> [[${product.town}]] <br>
-    <b>Автор: </b> <a th:href="@{/user/{id}(id=${product.user.id})}">  [[${product.user.name}]]</a> <br> <br>
-    <div th:if="${user.email}">
-        <form th:action="@{/product/delete/{id}(id=${product.id})}" method="post">
-            <input type="submit" value="Видалити товар">
-        </form>
-    </div>
+<h3>Інформація про товар</h3>
+<b>Назва товару:</b> [[${product.title}]] <br>
+<b>Опис товару:</b> [[${product.description}]] <br>
+<b>Ціна товару:</b> [[${product.price}]] <br>
+<b>Місто:</b> [[${product.town}]] <br>
+<b>Автор:</b> <a th:href="@{/user/{id}(id=${product.user.id})}">[[${product.user.name}]]</a> <br> <br>
 
+<div th:if="${user.email}">
+    <form th:action="@{/product/delete/{id}(id=${product.id})}" method="post">
+        <input type="submit" value="Видалити товар">
+    </form>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
