--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,20 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Практика 3ІПЗ-20</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <style>
+        body {
+            background-color: #343a40;
+            color: #fff;
+        }
+
+        h1, h4 {
+            text-align: center;
+            animation: fadeInUp 1s;
+        }
+
+        form {
+            max-width: 400px;
+            margin: 0 auto;
+            animation: fadeInUp 1s;
+        }
+
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+    </style>
 </head>
 <body>
-<h1> Вітаю на практиці </h1><hr>
+<h1> Спершу заєреструйтеся </h1>
+<hr>
 <h4> Реєстрація</h4>
 <form action="/registration" method="post">
-  Ім`я продавця: <input type="text" name="name"> <br><br>
-  e-mail: <input type="email" name="email"> <br><br>
-  Номер телефону: <input type="text" name="numberPhone"> <br><br>
-  Пароль: <input type="password" name="password"> <br><br>
-<!--    <input type="hidden" name="$_csrf." value="${_csrf.token}"/>-->
-  <input type="submit" value="Зареєструватися">
+    <div class="mb-3">
+        <label for="name" class="form-label">Ім'я продавця:</label>
+        <input type="text" class="form-control" id="name" name="name">
+    </div>
+    <div class="mb-3">
+        <label for="email" class="form-label">E-mail:</label>
+        <input type="email" class="form-control" id="email" name="email">
+    </div>
+    <div class="mb-3">
+        <label for="numberPhone" class="form-label">Номер телефону:</label>
+        <input type="text" class="form-control" id="numberPhone" name="numberPhone">
+    </div>
+    <div class="mb-3">
+        <label for="password" class="form-label">Пароль:</label>
+        <input type="password" class="form-control" id="password" name="password">
+    </div>
+    <!--    <input type="hidden" name="$_csrf." value="${_csrf.token}"/>-->
+    <button type="submit" class="btn btn-primary">Зареєструватися</button>
 </form>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
