--- a/src/main/resources/templates/user-info.html
+++ b/src/main/resources/templates/user-info.html
@@ -3,28 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <title>Практика 3ІПЗ-20</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <style>
+        body {
+            background-color: #343a40;
+            color: #fff;
+        }
+
+        h1, h4 {
+            text-align: center;
+            animation: slideInUp 1s;
+        }
+
+        .btn-primary {
+            background-color: #28a745;
+            border-color: #28a745;
+        }
+
+        .btn-details {
+            background-color: transparent;
+            border: none;
+            color: #28a745;
+            transition: color 0.3s;
+        }
+
+        .btn-details:hover {
+            color: #28a745;
+        }
+
+        @keyframes slideInUp {
+            from {
+                transform: translateY(20px);
+                opacity: 0;
+            }
+            to {
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
+    </style>
 </head>
 <body>
-<h1> Вітаю на практиці </h1><hr>
-<h4> Інформація про користувача <i> [[${user.name}]]</i> </h4>
-<b> Телефон </b> [[${user.numberPhone}]]<br>
-<b> Email </b> [[${user.email}]]<br>
+<h1> Вітаю на тлі профілю користувача Миколфі [[${user.name}]] </h1>
+<hr>
+<h4> Інформація про користувача <i>[[${user.name}]]</i></h4>
+<b> Телефон: </b> [[${user.numberPhone}]]<br>
+<b> Email: </b> [[${user.email}]]<br>
 
-<h4> Товари користувача <i> [[${user.name}]]</i></h4>
+<h4> Товари користувача <i>[[${user.name}]]</i></h4>
 
 <!--  якщо список пустий (товар)  -->
 <div th:if="${products.isEmpty}">
     <div> <h3> Товар відсутній </h3> </div>
-
 </div>
 <!--якщо не пустий-->
 <div th:unless="${products.isEmpty}">
-    <div th:each="product:${products}">
+    <div th:each="product:${products}" class="my-4">
         <span th:text="${product.title}"></span>
         <span th:text="${product.price}"></span><b> грн.</b>
-        <a th:href="@{/product/{id}(id=${product.id})}">Детальніше...</a>
+        <a th:href="@{/product/{id}(id=${product.id})}" class="btn btn-primary">Детальніше...</a>
     </div>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
